# chatgpt-codex

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  permissions.example.json  pyproject.toml
chatgpt_codex/: __init__.py  builder.py  cli.py  config.py  executor.py  openapi.py  security.py  server.py  workspace.py
docs/: AI_NATIVE.md  SECURITY.md
docs/superpowers/plans/: 2026-05-29-chatgpt-codex.md
examples/: cloudflared-named-tunnel.yml  config.example.json
scripts/: api-smoke.py  chatgpt_builder_playwright.mjs  install.ps1  install.sh  prepare-permissions.ps1  prepare-permissions.sh  setup-smoke.py
skills/chatgpt-codex/: SKILL.md
skills/chatgpt-codex/agents/: openai.yaml
skills/chatgpt-codex/references/: agent-handoff.md
tests/: test_bootstrap.py  test_builder.py  test_cli.py  test_docs.py  test_openapi.py  test_playwright_script.py  test_security.py  test_server.py  test_setup_smoke_script.py  test_workspace.py
